--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clan Member Cards</title>
+    <title>NONG Members</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
@@ -12,7 +12,10 @@
         <div id="clanTitle"></div>
     </header>
     <main>
-        <div id="loading">Loading clan members...</div>
+        <div id="loading">
+            Loading clan members...
+            <div class="spinner"></div>
+        </div>        
         <div id="cardContainer"></div>
     </main>
     <script src="assets/js/script.js"></script>
